* Update prerequisite requirements inside the rpm spec files for juise * Modify Clira to use db.slax rather than db.php * Remove db.php & all requirements for php inside Clira

--- a/packaging/juise.clira.spec.in
+++ b/packaging/juise.clira.spec.in
@@ -27,6 +27,7 @@ Requires: libxml2
 Requires: libxslt
 Requires: sqlite
 Requires: psmisc
+requires: libssh2
 
 %description
 Welcome to juise, the JUNOS User Interface Scripting Environment.
