--- a/packaging/juise.space.spec.in
+++ b/packaging/juise.space.spec.in
@@ -24,6 +24,12 @@ BuildRequires:  libssh2
 BuildRequires:  bison-devel
 BuildRequires:  bison
 
+Requires: libslax
+Requires: libxml2
+Requires: libxslt
+Requires: sqlite
+Requires: libssh2
+
 %description
 Welcome to juise, the JUNOS User Interface Scripting Environment.
 This library adds the JUNOS-specific bits to the base SLAX language.
