* Add prefix support in run-clira.sh * Fix issue under mac build of mod_juise (this MAY cause an issue with linux -   need to further test)

--- a/configure.ac
+++ b/configure.ac
@@ -625,6 +625,7 @@ AC_CONFIG_FILES([
   mixer/Makefile
   web/Makefile
   web/clira.conf
+  web/run-clira.sh
   import/Makefile
   tests/Makefile
   packaging/juise.pc
