--- a/web/clira.conf.in
+++ b/web/clira.conf.in
@@ -2,7 +2,7 @@ server.document-root = "@JUISE_WEB_DIR@"
 server.tag  = "lighttpd/1.4.28 juisebox"
 server.port = 3000
 server.bind = "127.0.0.1"
-server.pid-file = "/var/run/lighttpd.pid"
+server.pid-file = "JUISE_HOME/lighttpd.pid"
 
 server.modules = (
     "mod_auth", 
@@ -68,5 +68,5 @@ expire.url = ( "/static/images/" => "access 1 hours" )
 #url.rewrite = ( "^/$" => "/status" )
 
 websocket.server = (
-    "/mixer" =>    ( "command" => "@prefix@/bin/mixer --user ${remoteuser}" )
+    "/mixer" =>    ( "command" => "@prefix@/bin/mixer --client --user ${remoteuser}" )
 )
