* Fix mod_juise to use new required mixer argument --client when connecting * Fix Clira loadConfig to support configuration-patch * Fix version.slax to point to correct version string * Update mac package scripts

--- a/web/Makefile.am
+++ b/web/Makefile.am
@@ -79,7 +79,7 @@ install-exec-hook:
 	${MV} ${DESTDIR}/${bindir}/run-clira.sh ${DESTDIR}/${bindir}/run-clira
 
 install-data-hook:
-	${CP} -r apps core css images themes ${webdatadir}
+	${CP} -r ${srcdir}/apps ${srcdir}/core ${srcdir}/css ${srcdir}/images ${srcdir}/themes ${webdatadir}
 
 dist-hook:
-	${CP} -r apps core css images themes ${webdatadir}
+	${CP} -r ${srcdir}/apps ${srcdir}/core ${srcdir}/css ${srcdir}/images ${srcdir}/themes ${distdir}
