--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -8,7 +8,7 @@ Homepage: https://github.com/Juniper/juise
 
 Package: juise
 Architecture: amd64
-Depends: libslax, libsqlite3-0, libssh2-1
+Depends: libslax0, libsqlite3-0, libssh2-1
 Suggests: lighttpd-for-juise
 Section: utils
 Priority: optional
