--- a/packaging/rpm/juise.spec.in
+++ b/packaging/rpm/juise.spec.in
@@ -13,8 +13,6 @@ Group:       Development/Libraries
 URL:         https://github.com/Juniper/libslax
 Source0:     https://github.com/Juniper/@PACKAGE_NAME@/releases/@PACKAGE_VERSION@/@PACKAGE_NAME@-@PACKAGE_VERSION@.tar.gz
 
-BuildRoot:   %{_tmppath}/%{name}-%{version}-%{release}-root
-
 BuildRequires:  libxml2-devel
 BuildRequires:  libxslt-devel
 BuildRequires:  curl-devel
@@ -34,9 +32,6 @@ Requires: libssh2
 Welcome to juise, the JUNOS User Interface Scripting Environment.
 This library adds the JUNOS-specific bits to the base SLAX language.
 
-NOTE: This is the spec file used for JUNOS Space, and should not
-be used for other builds;  use libslax.spec instead.
-
 %prep
 %setup -q
 
@@ -46,7 +41,7 @@ make %{?_smp_mflags}
 
 %install
 rm -rf $RPM_BUILD_ROOT
-make DESTDIR="$RPM_BUILD_ROOT" install
+%make_install
 
 %clean
 rm -rf $RPM_BUILD_ROOT
@@ -55,7 +50,6 @@ rm -rf $RPM_BUILD_ROOT
 
 %files
 %{_bindir}/*
-%{_sbindir}/*
 %{_libdir}/*
 %{_libdir}/pkgconfig/juise.pc
 %{_libdir}/lib*
