--- a/packaging/rpm/juise.clira.spec.in
+++ b/packaging/rpm/juise.clira.spec.in
@@ -1,7 +1,7 @@
 Name:        @PACKAGE_NAME@
 Version:     @PACKAGE_VERSION@
 Release:     1%{?dist}
-Summary:     JUNOS User Interface Scripting Environment
+Summary:     JUNOS User Interface Scripting Environment with CLIRA support
 
 Prefix:      /usr
 
@@ -26,22 +26,29 @@ Requires: libslax
 Requires: libxml2
 Requires: libxslt
 Requires: sqlite
+Requires: psmisc
 Requires: libssh2
 
 %description
 Welcome to juise, the JUNOS User Interface Scripting Environment.
 This library adds the JUNOS-specific bits to the base SLAX language.
 
+NOTE: This spec file is used to build juise with CLIRA files included.
+
+%define _unpackaged_files_terminate_build 0
+
 %prep
 %setup -q
 
 %build
-%configure
+%configure --enable-clira --enable-mixer --with-lighttpd-src=@LIGHTTPD_SRC@
 make %{?_smp_mflags}
 
 %install
 rm -rf $RPM_BUILD_ROOT
 %make_install
+mkdir -p ${RPM_BUILD_ROOT}/usr/lib64/lighttpd-for-juise
+mv ${RPM_BUILD_ROOT}/usr/lib64/mod_juise.so*  ${RPM_BUILD_ROOT}/usr/lib64/lighttpd-for-juise
 
 %clean
 rm -rf $RPM_BUILD_ROOT
@@ -50,10 +57,10 @@ rm -rf $RPM_BUILD_ROOT
 
 %files
 %{_bindir}/*
-%{_sbindir}/*
-%{_libdir}/*
+%{_libdir}/libjuise.so*
+%{_libdir}/slax/*
+%{_libdir}/lighttpd-for-juise/*
 %{_libdir}/pkgconfig/juise.pc
-%{_libdir}/lib*
 %{_datarootdir}/juise/*
 %{_datadir}/doc/juise/*
 %{_libexecdir}/juise/*
