--- a/packaging/juise.spec.in
+++ b/packaging/juise.spec.in
@@ -1,7 +1,7 @@
 Name:        @PACKAGE_NAME@
 Version:     @PACKAGE_VERSION@
 Release:     1%{?dist}
-Summary:     JUNOS User Interface Scripting Environment with CLIRA support
+Summary:     JUNOS User Interface Scripting Environment
 
 Prefix:      /usr
 
@@ -26,29 +26,22 @@ Requires: libslax
 Requires: libxml2
 Requires: libxslt
 Requires: sqlite
-Requires: psmisc
 Requires: libssh2
 
 %description
 Welcome to juise, the JUNOS User Interface Scripting Environment.
 This library adds the JUNOS-specific bits to the base SLAX language.
 
-NOTE: This spec file is used to build juise with CLIRA files included.
-
-%define _unpackaged_files_terminate_build 0
-
 %prep
 %setup -q
 
 %build
-%configure --enable-clira --enable-mixer --with-lighttpd-src=@LIGHTTPD_SRC@
+%configure
 make %{?_smp_mflags}
 
 %install
 rm -rf $RPM_BUILD_ROOT
 %make_install
-mkdir -p ${RPM_BUILD_ROOT}/usr/lib64/lighttpd-for-juise
-mv ${RPM_BUILD_ROOT}/usr/lib64/mod_juise.so*  ${RPM_BUILD_ROOT}/usr/lib64/lighttpd-for-juise
 
 %clean
 rm -rf $RPM_BUILD_ROOT
@@ -57,10 +50,10 @@ rm -rf $RPM_BUILD_ROOT
 
 %files
 %{_bindir}/*
-%{_libdir}/libjuise.so*
-%{_libdir}/slax/*
-%{_libdir}/lighttpd-for-juise/*
+%{_sbindir}/*
+%{_libdir}/*
 %{_libdir}/pkgconfig/juise.pc
+%{_libdir}/lib*
 %{_datarootdir}/juise/*
 %{_datadir}/doc/juise/*
 %{_libexecdir}/juise/*
