--- a/packaging/juise.clira.spec.in
+++ b/packaging/juise.clira.spec.in
@@ -1,7 +1,7 @@
 Name:        @PACKAGE_NAME@
 Version:     @PACKAGE_VERSION@
 Release:     1%{?dist}
-Summary:     JUNOS User Interface Scripting Environment
+Summary:     JUNOS User Interface Scripting Environment with Clira support
 
 Prefix:      /usr
 
@@ -12,8 +12,6 @@ License:     BSD
 Group:       Development/Libraries
 URL:         https://github.com/Juniper/libslax
 Source0:     https://github.com/Juniper/@PACKAGE_NAME@/releases/@PACKAGE_VERSION@/@PACKAGE_NAME@-@PACKAGE_VERSION@.tar.gz
-
-BuildRoot:   %{_tmppath}/%{name}-%{version}-%{release}-root
 
 BuildRequires:  libxml2-devel
 BuildRequires:  libxslt-devel
@@ -28,25 +26,29 @@ Requires: libslax
 Requires: libxml2
 Requires: libxslt
 Requires: sqlite
-Requires: libssh2
+Requires: psmisc
+requires: libssh2
 
 %description
 Welcome to juise, the JUNOS User Interface Scripting Environment.
 This library adds the JUNOS-specific bits to the base SLAX language.
 
-NOTE: This is the spec file used for JUNOS Space, and should not
-be used for other builds;  use libslax.spec instead.
+NOTE: This spec file is used to build juise with Clira files included.
+
+%define _unpackaged_files_terminate_build 0
 
 %prep
 %setup -q
 
 %build
-%configure
+%configure --enable-clira --enable-mixer --with-lighttpd-src=@LIGHTTPD_SRC@
 make %{?_smp_mflags}
 
 %install
 rm -rf $RPM_BUILD_ROOT
-make DESTDIR="$RPM_BUILD_ROOT" install
+%make_install
+mkdir -p ${RPM_BUILD_ROOT}/usr/lib64/lighttpd-for-juise
+mv ${RPM_BUILD_ROOT}/usr/lib64/mod_juise.so*  ${RPM_BUILD_ROOT}/usr/lib64/lighttpd-for-juise
 
 %clean
 rm -rf $RPM_BUILD_ROOT
@@ -55,9 +57,11 @@ rm -rf $RPM_BUILD_ROOT
 
 %files
 %{_bindir}/*
-%{_libdir}/*
+%{_sbindir}/*
+%{_libdir}/libjuise.so*
+%{_libdir}/slax/*
+%{_libdir}/lighttpd-for-juise/*
 %{_libdir}/pkgconfig/juise.pc
-%{_libdir}/lib*
 %{_datarootdir}/juise/*
 %{_datadir}/doc/juise/*
 %{_libexecdir}/juise/*
