Adding CLIRA App Manager, .clira files

--- a/web/clira.conf.in
+++ b/web/clira.conf.in
@@ -70,3 +70,6 @@ expire.url = ( "/static/images/" => "access 1 hours" )
 websocket.server = (
     "/mixer" =>    ( "command" => "@prefix@/bin/mixer --client --user ${remoteuser}" )
 )
+$HTTP["url"] =~ "^.+\.py$" {
+    cgi.assign = ( ".py" => "/usr/bin/python" )
+}
