s/before_install/before_script/ (travis)

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ notifications:
   recipients:
     - libslax-noise@googlegroups.com
 
-before_install:
+before_script:
   - git clone git://github.com/Juniper/libslax.git
   - ( cd libslax && uname -a && /bin/sh ./bin/setup.sh && cd build && ../configure && make && sudo make install )
 
