--- a/configure.ac
+++ b/configure.ac
@@ -8,8 +8,8 @@
 # using the SOFTWARE, you agree to be bound by the terms of that
 # LICENSE.
 
-AC_PREREQ(2.2)
-AC_INIT([juise], [0.9.0], [phil@juniper.net])
+AC_PREREQ([2.72])
+AC_INIT([juise],[0.9.0],[phil@juniper.net])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign -Wno-portability])
 
 case $prefix in
@@ -64,8 +64,6 @@ AC_DEFINE_UNQUOTED(JUISE_PATH_PERL, ["$PATH_PERL"], [Path to binary])
 AC_DEFINE_UNQUOTED(JUISE_PATH_PYTHON, ["$PATH_PYTHON"], [Path to binary])
 
 AC_PROG_LN_S
-
-AC_STDC_HEADERS
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_INLINE
@@ -432,7 +430,7 @@ AC_SUBST(SLAX_OXTRADOCDIR)
 #
 
 AC_ARG_WITH(ssh2,
-  AC_HELP_STRING([--with-ssh2=PATH],[Use libssh2 installed under PATH]),
+  AS_HELP_STRING([--with-ssh2=PATH],[Use libssh2 installed under PATH]),
   [
     case $with_ssh2 in
       *)
@@ -454,7 +452,7 @@ fi
 #
 
 AC_ARG_WITH(sqlite3,
-  AC_HELP_STRING([--with-sqlite3=PATH],[Use sqlite3 installed under PATH]),
+  AS_HELP_STRING([--with-sqlite3=PATH],[Use sqlite3 installed under PATH]),
   [
     case $with_sqlite3 in
       *)
@@ -477,7 +475,7 @@ fi
 #
 
 AC_MSG_CHECKING(for perl regular expressions support)
-AC_ARG_WITH(pcre, AC_HELP_STRING([--with-pcre],[Enable pcre support (default yes)]),
+AC_ARG_WITH(pcre, AS_HELP_STRING([--with-pcre],[Enable pcre support (default yes)]),
     [WITH_PCRE=$withval],[WITH_PCRE=yes])
 AC_MSG_RESULT([$WITH_PCRE])
 
